maqueta html y dando estilos

--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/main.css">
   <title>Personal Proyect!!</title>
 </head>
 <body>
   <header>
-    <h1>I love not less to human, but more to nature</h1>
+    <div class="container">
+      <h1>I love not less to human, but more to nature</h1>
+      <img src="assets/images/menu.png" alt="">   
+
+      <nav class="menu">
+        <a href="">About us</a>
+        <a href="">Profile</a>
+        <a href="">Pictures</a>
+        <a href="">Themes</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
   </header>
-  <nav></nav>
   <section></section>
   <aside class="">
 
